Safari alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,6 @@ canvas {
 }
 
 #version_select {
-	text-align:center;
 	width:100%;
 	height:50px;
 	padding-top:15px;
@@ -419,7 +418,7 @@ svg rect.module_bar_transparent {
 }
 
 #lhs_left {
-	margin-left:-660px;
+	margin-left:10px;
 	margin-top:0px;
 	position:absolute;
 	opacity:0.4;
@@ -427,7 +426,7 @@ svg rect.module_bar_transparent {
 }
 
 #lhs_right {
-	margin-left:-620px;
+	margin-left:45px;
 	margin-top:0px;
 	position:absolute;
 	opacity:0.4;
@@ -435,7 +434,7 @@ svg rect.module_bar_transparent {
 }
 
 #rhs_left {
-	margin-left:580px;
+	margin-left:1270px;
 	margin-top:0px;
 	position:absolute;
 	opacity:0.4;
@@ -443,7 +442,7 @@ svg rect.module_bar_transparent {
 }
 
 #rhs_right {
-	margin-left:620px;
+	margin-left:1305px;
 	margin-top:0px;
 	position:absolute;
 	opacity:0.4;
